Preventing images in articles to grow too much.

--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -310,7 +310,7 @@ body {
     }
 
     img {
-      max-width: 100%;
+      max-width: 700px;
       margin-left: auto;
       margin-right: auto;
       display: block;
